<resources>
    <string name="app_name">MyAppPoemas</string>
    <string name="poemaA1">
        ¿Dónde te has escondido en este tiempo?\n
        Bajo tus mismas faldas.\n
        Enfundada en tu propia fortaleza negaste la evidencia.\n
        ¿Qué evidencia\n
        puede haber si no vas a un entierro?\n
        \n\n
        ¿Quién ha muerto en esta eterna primavera?\n
        ¿Quién puede morir en este lugar de cielos y volcanes\n
        qué se reflejan siempre en los maizales verdes?\n
        ¿Quién soy yo para sentir, ahora, después de la década perdida\n
        este infame dolor que me destroza el pecho?\n
        Soy la superviviente. La que cerró los ojos\n
        y se llenó las orejas con cera.\n
        La que pasó junto a las rocas sin escuchar las voces.\n
        Ciega por propia voluntad para evitar la visión de los buitres\n
        limpiándose los picos en los huesos.
    </string>
    <string name="poemaA2">
        Redonda, hinchada de frotarse contra el cielo\n
        rasga mi piel con su delgada luz\n
        Cae sobre mi pelo\n
        con la levedad de una sirena\n
        que no se hubiera dado cuenta\n
        que no posee piernas\n
        Solivianta mi sangre\n
        me enciende de locura\n
        me regala una piel fosforescente\n
        y me convierte\n
        aceite hirviendo\n
        en fauna\n
        (cascos y cuernos y cabello desbocado\n
        bajo el lúbrico soplo de lo oscuro)
    </string>
    <string name="poemaA3">
        El más hermoso mito inventado por el hombre\n
        más hermoso que Dios\n
        o el hermoso ideal del socialismo\n
        y el dinero que acumulan los ricos.\n
        Más hermoso que el odio, la invención más hermosa.\n
        El amor.
    </string>
    <string name="poemaC1">
        Si tuve en los caminos insensato\n
        afán de regresar, y si del viaje\n
        no me quedó sino el amable dato\n
        de algún humilde ocasional paraje;
        \n\n
        si el mar me dio tan sólo el inmediato\n
        goce de la canción de su oleaje,\n
        montaña, cielo y mar en su arrebato\n
        me enseñaron su pítico lenguaje.
        \n\n
        Mi aprendizaje fue harto sencillo,\n
        de ciego que no urgió de lazarillo;\n
        cuanto buscaba en mí mismo escondía;
        \n\n
        para cumbres y mar mi desencanto,\n
        para caminos mi melancolía,\n
        ¡que todo regresaba, en mí, a mi llanto!
    </string>
    <string name="poemaC2">
        Si quieres encontrarme no me sigas\n
        en mi desamparado movimiento,\n
        guárdate de la flor de mis fatigas\n
        y del dictamen de mi desaliento.
        \n\n
        Mis pájaros de sueño no persigas,\n
        huye el que es en mí vencido intento,\n
        mi destrozado símbolo de espigas,\n
        mi desolado sollozar de viento.
        \n\n
        Me encontrarás en el ciprés dormido,\n
        en la porosa tierra desgajada,\n
        en el agua, en la nube y en el humo.
        \n\n
        ¿Pero por qué me buscas sin sentido\n
        fuera de ti, si en tu extensión amada\n
        río de fuego y llanto me consumo?
    </string>
    <string name="poemaC3">
        La vanidad de mi pequeño nombre\n
        quisiera abandonar en el camino,\n
        que nadie sepa ni recuerde el hombre\n
        que fui en la tierra, oscuro peregrino.
        \n\n
        De la fama ignorado y del renombre,\n
        cumplir sencillamente mi destino\n
        y que el lector futuro no se asombre\n
        siquiera del silencio en que me obstino.
        \n\n
        Dejar mi verso dócil o impaciente\n
        no codicioso del aplauso ardiente\n
        sino de oculto agrado contenido
        \n\n
        como pintor anónimo borrado\n
        en la leyenda de su lienzo amado.\n
        «Autorretrato de un desconocido»…
    </string>
    <string name="poemaM1">
        Tú, que vienes caminando\n
        desde el fondo de mi vida;\n
        que traes como bandera\n
        la música de tu risa;\n
        tú que en tus ojos escondes\n
        lo que mi alma necesita;\n
        tú, que en mi pecho has vivido\n
        por años como dormida\n
        y hoy me despiertas de golpe\n
        hasta que no da cabida\n
        mi pequeño corazón\n
        para esta explosión de dicha.\n
        Eres el río al que quise\n
        ponerle diques un día.\n
        Hoy que subió tu corriente\n
        ya no hay diques que resistan.\n
        En la casa de mi pecho,\n
        en mi sueño y mi vigilia,\n
        en las calles de mis manos,\n
        en la ciudad de mis días,\n
        en la patria de mis pasos\n
        y en el país de mi vida\n
        ven, entra y manda: es tu reino,\n
        tu victoria, tu conquista.
    </string>
    <string name="poemaM2">
        Si sólo pudiera verte\n
        y sólo escuchar tu risa.
        \n\n
        Si sólo fuera la brisa\n
        que en tu pelo se divierte.
        \n\n
        Si sólo fuera el inerte\n
        ladrillo que tu pie pisa
        \n\n
        o el agua que se desliza\n
        sobre ti sin conocerte.
        \n\n
        Si sólo fuera el no verte,\n
        mas sin la muerte y la prisa.
    </string>
    <string name="poemaM3">
        Aguja de una iglesia que se eleva\n
        con esa clara unción de la plegaria.\n
        Árbol con golondrina necesaria.\n
        Parque: almendro que músicas renueva.
        \n\n
        Ansiedad de un crepúsculo que lleva\n
        los tintes de una sangre temeraria.\n
        Calles con rectitudes de araucaria.\n
        Sudor, contra-quejidos en la gleba.
        \n\n
        Heroica por la sangre de sus manes,\n
        por su pecho de ardiente fumarola\n
        y su raza de auténticos titanes.
        \n\n
        Santa Ana es una flor en su corola\n
        con pétalos de cerros y volcanes.\n
        Santa Ana, para mí, se llama Lola…
    </string>
</resources>