<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MA3"
    android:orientation="vertical">

    <ImageView
        android:layout_width="match_parent"
        android:layout_height="35sp"
        android:src="@drawable/ic_flor"
        android:background="#7BD3DF"
        />
    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="CÉSAR BRAÑAS"
        android:textSize="20sp"
        android:gravity="center"
        android:textStyle="bold"
        android:background="#7BD3DF"
        />
    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        >
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical"
            android:layout_margin="20sp">
            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:src="@drawable/ic_poemacuatro"
                />
            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:text="Aprendizajes"
                android:textStyle="bold"
                android:textSize="20sp"
                android:layout_marginTop="10sp"
                />
            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:text="@string/poemaC1"
                android:textStyle="normal"
                android:textSize="15sp"
                android:layout_marginTop="10sp"
                android:layout_marginBottom="50sp"
                />
            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="225sp"
                android:src="@drawable/ic_poemacinco"
                />
            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:text="Donde estoy"
                android:textStyle="bold"
                android:textSize="20sp"
                android:layout_marginTop="10sp"
                />
            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:text="@string/poemaC2"
                android:textStyle="normal"
                android:textSize="15sp"
                android:layout_marginTop="10sp"
                android:layout_marginBottom="50sp"
                />
            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="190sp"
                android:src="@drawable/ic_poemaseis"
                />
            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:text="Vanidad"
                android:textStyle="bold"
                android:textSize="20sp"
                android:layout_marginTop="10sp"
                />
            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:text="@string/poemaC3"
                android:textStyle="normal"
                android:textSize="15sp"
                android:layout_marginTop="10sp"
                android:layout_marginBottom="70sp"
                />
            <Button
                android:id="@+id/btnRegresar2"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="30sp"
                android:layout_marginRight="30sp"
                android:text="REGRESAR"
                android:textStyle="bold"
                android:backgroundTint="#7BD3DF"
                android:layout_marginBottom="60sp"
                />
        </LinearLayout>
    </ScrollView>
</LinearLayout>