<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MA4"
    android:orientation="vertical">

    <ImageView
        android:layout_width="match_parent"
        android:layout_height="35sp"
        android:src="@drawable/ic_flor"
        android:background="#7BA3DF"
        />
    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="MANUEL JOSÉ ARCE"
        android:textSize="20sp"
        android:gravity="center"
        android:textStyle="bold"
        android:background="#7BA3DF"
        />
    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        >
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical"
            android:layout_margin="20sp">
            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="250sp"
                android:src="@drawable/ic_poemasiete"
                />
            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:text="Hola"
                android:textStyle="bold"
                android:textSize="20sp"
                android:layout_marginTop="10sp"
                />
            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:text="@string/poemaM1"
                android:textStyle="normal"
                android:textSize="15sp"
                android:layout_marginTop="10sp"
                android:layout_marginBottom="50sp"
                />
            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="245sp"
                android:src="@drawable/ic_poemaocho"
                />
            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:text="Si sólo pudiera verte"
                android:textStyle="bold"
                android:textSize="20sp"
                android:layout_marginTop="10sp"
                />
            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:text="@string/poemaM2"
                android:textStyle="normal"
                android:textSize="15sp"
                android:layout_marginTop="10sp"
                android:layout_marginBottom="50sp"
                />
            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="245sp"
                android:src="@drawable/ic_poemanueve"
                />
            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:text="Retrato de la ciudad"
                android:textStyle="bold"
                android:textSize="20sp"
                android:layout_marginTop="10sp"
                />
            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:text="@string/poemaM3"
                android:textStyle="normal"
                android:textSize="15sp"
                android:layout_marginTop="10sp"
                android:layout_marginBottom="70sp"
                />
            <Button
                android:id="@+id/btnRegresar3"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="30sp"
                android:layout_marginRight="30sp"
                android:text="REGRESAR"
                android:textStyle="bold"
                android:backgroundTint="#7BA3DF"
                android:layout_marginBottom="60sp"
                />
        </LinearLayout>
    </ScrollView>
</LinearLayout>