<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MA2"
    android:orientation="vertical">

    <ImageView
        android:layout_width="match_parent"
        android:layout_height="35sp"
        android:src="@drawable/ic_flor"
        android:background="#8DC6AD"
        />
    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="ANA MARÍA RODAS"
        android:textSize="20sp"
        android:gravity="center"
        android:textStyle="bold"
        android:background="#8DC6AD"
        />

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical"
            android:layout_margin="20sp">
            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="210sp"
                android:src="@drawable/ic_poemauno"
                />
            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:text="¿Dónde te has escondido en este tiempo?"
                android:textStyle="bold"
                android:textSize="20sp"
                android:layout_marginTop="10sp"
                />
            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:text="@string/poemaA1"
                android:textStyle="normal"
                android:textSize="15sp"
                android:layout_marginTop="10sp"
                android:layout_marginBottom="50sp"
                />
            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="260sp"
                android:src="@drawable/ic_poemados"
                />
            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:text="La luna, siempre"
                android:textStyle="bold"
                android:textSize="20sp"
                android:layout_marginTop="10sp"
                />
            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:text="@string/poemaA2"
                android:textStyle="normal"
                android:textSize="15sp"
                android:layout_marginTop="10sp"
                android:layout_marginBottom="50sp"
                />
            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:src="@drawable/ic_poematres"
                />
            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:text="El más hermoso mito inventado por el hombre"
                android:textStyle="bold"
                android:textSize="20sp"
                android:layout_marginTop="10sp"
                />
            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:text="@string/poemaA3"
                android:textStyle="normal"
                android:textSize="15sp"
                android:layout_marginTop="10sp"
                android:layout_marginBottom="70sp"
                />
            <Button
                android:id="@+id/btnRegresar1"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="30sp"
                android:layout_marginRight="30sp"
                android:text="REGRESAR"
                android:textStyle="bold"
                android:backgroundTint="#8DC6AD"
                android:layout_marginBottom="60sp"
                />
        </LinearLayout>
    </ScrollView>

</LinearLayout>